--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Donut Shop</title>
 </head>
 <style>
-/* Write styles here :) */
+h1 {
+    color: blue;
+    text-align: center;
+}
 
 </style>
 <body>
