--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@ h1 {
     color: blue;
     text-align: center;
 }
-
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
 </style>
 <body>
     <h1>hello world</h1>
