--- a/index.html
+++ b/index.html
@@ -17,8 +17,25 @@ html, body {
     height: 100%;
     width: 100%;
 }
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    background-color: #fff0f5;
+}
+img {
+    width: 300px;
+    height: auto;
+    margin: 20px 0;
+}
 </style>
 <body>
     <h1>hello world</h1>
+    <p>Welcome to the Donut Shop!</p>
+    <img src="https://example.com/donut.jpg" alt="Delicious Donut" />
+    <p>Enjoy our variety of donuts!</p>
+
 </body>
 </html>
